KIARA/src/main/java/de/dfki/kiara/idl/ThriftParser.java
// Generated from /home/rubinste/proj_de3/kiara_java/KIARA_Java/KIARAParser/src/main/java/de/dfki/kiara/Thrift.g4 by ANTLR 4.2.2
package de.dfki.kiara.idl;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ThriftParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INCLUDE=1, CPP_INCLUDE=2, NAMESPACE=3, CPP_NAMESPACE=4, PHP_NAMESPACE=5,
		PY_MODULE=6, PERL_PACKAGE=7, RUBY_NAMESPACE=8, SMALLTALK_CATEGORY=9, SMALLTALK_PREFIX=10,
		JAVA_PACKAGE=11, COCOA_PACKAGE=12, XSD_NAMESPACE=13, CSHARP_NAMESPACE=14,
		TYPEDEF=15, ENUM=16, SENUM=17, CONST=18, STRUCT=19, UNION=20, XSD_ALL=21,
		XSD_OPTIONAL=22, XSD_NILLABLE=23, XSD_ATTRIBUTES=24, EXCEPTION=25, SERVICE=26,
		EXTENDS=27, ONEWAY=28, THROWS=29, REQUIRED=30, OPTIONAL=31, VOID=32, STRING=33,
		BINARY=34, SLIST=35, BOOL=36, BYTE=37, I16=38, I32=39, I64=40, DOUBLE=41,
		MAP=42, SET=43, LIST=44, CPP_TYPE=45, STAR=46, COMMA=47, COLON=48, SEMI=49,
		LBRACE=50, RBRACE=51, LBRACKET=52, RBRACKET=53, LPAREN=54, RPAREN=55,
		EQ=56, LT=57, GT=58, INTCONSTANT=59, HEXCONSTANT=60, DUBCONSTANT=61, IDENTIFIER=62,
		WHITESPACE=63, COMMENT=64, UNIXCOMMENT=65, ST_IDENTIFIER=66, LITERAL=67;
	public static final String[] tokenNames = {
		"<INVALID>", "'include'", "'cpp_include'", "'namespace'", "'cpp_namespace'",
		"'php_namespace'", "'py_module'", "'perl_package'", "'ruby_namespace'",
		"'smalltalk_category'", "'smalltalk_prefix'", "'java_package'", "'cocoa_package'",
		"'xsd_namespace'", "'csharp_namespace'", "'typedef'", "'enum'", "'senum'",
		"'const'", "'struct'", "'union'", "'xsd_all'", "'xsd_optional'", "'xsd_nillable'",
		"'xsd_attributes'", "'exception'", "'service'", "'extends'", "'oneway'",
		"'throws'", "'required'", "'optional'", "'void'", "'string'", "'binary'",
		"'slist'", "'bool'", "'byte'", "'i16'", "'i32'", "'i64'", "'double'",
		"'map'", "'set'", "'list'", "'cpp_type'", "'*'", "','", "':'", "';'",
		"'{'", "'}'", "'['", "']'", "'('", "')'", "'='", "'<'", "'>'", "INTCONSTANT",
		"HEXCONSTANT", "DUBCONSTANT", "IDENTIFIER", "WHITESPACE", "COMMENT", "UNIXCOMMENT",
		"ST_IDENTIFIER", "LITERAL"
	};
	public static final int
		RULE_program = 0, RULE_header = 1, RULE_definition = 2, RULE_typeDefinition = 3,
		RULE_typedef = 4, RULE_commaOrSemicolon = 5, RULE_enum_t = 6, RULE_enumDef = 7,
		RULE_senum = 8, RULE_senumDef = 9, RULE_constDefinition = 10, RULE_constValue = 11,
		RULE_constList = 12, RULE_constMap = 13, RULE_constValuePair = 14, RULE_struct = 15,
		RULE_union = 16, RULE_xsdAll = 17, RULE_xsdOptional = 18, RULE_xsdNillable = 19,
		RULE_xsdAttributes = 20, RULE_xception = 21, RULE_service = 22, RULE_function = 23,
		RULE_oneway = 24, RULE_throwz = 25, RULE_field = 26, RULE_fieldIdentifier = 27,
		RULE_fieldRequiredness = 28, RULE_fieldValue = 29, RULE_functionType = 30,
		RULE_fieldType = 31, RULE_baseType = 32, RULE_simpleBaseType = 33, RULE_containerType = 34,
		RULE_simpleContainerType = 35, RULE_mapType = 36, RULE_setType = 37, RULE_listType = 38,
		RULE_cppType = 39, RULE_typeAnnotations = 40, RULE_typeAnnotation = 41,
		RULE_intConstant = 42;
	public static final String[] ruleNames = {
		"program", "header", "definition", "typeDefinition", "typedef", "commaOrSemicolon",
		"enum_t", "enumDef", "senum", "senumDef", "constDefinition", "constValue",
		"constList", "constMap", "constValuePair", "struct", "union", "xsdAll",
		"xsdOptional", "xsdNillable", "xsdAttributes", "xception", "service",
		"function", "oneway", "throwz", "field", "fieldIdentifier", "fieldRequiredness",
		"fieldValue", "functionType", "fieldType", "baseType", "simpleBaseType",
		"containerType", "simpleContainerType", "mapType", "setType", "listType",
		"cppType", "typeAnnotations", "typeAnnotation", "intConstant"
	};

	@Override
	public String getGrammarFileName() { return "Thrift.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ThriftParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public HeaderContext header(int i) {
			return getRuleContext(HeaderContext.class,i);
		}
		public List<HeaderContext> header() {
			return getRuleContexts(HeaderContext.class);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INCLUDE) | (1L << CPP_INCLUDE) | (1L << NAMESPACE) | (1L << CPP_NAMESPACE) | (1L << PHP_NAMESPACE) | (1L << PY_MODULE) | (1L << PERL_PACKAGE) | (1L << RUBY_NAMESPACE) | (1L << SMALLTALK_CATEGORY) | (1L << SMALLTALK_PREFIX) | (1L << JAVA_PACKAGE) | (1L << COCOA_PACKAGE) | (1L << XSD_NAMESPACE) | (1L << CSHARP_NAMESPACE))) != 0)) {
				{
				{
				setState(86); header();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TYPEDEF) | (1L << ENUM) | (1L << SENUM) | (1L << CONST) | (1L << STRUCT) | (1L << UNION) | (1L << EXCEPTION) | (1L << SERVICE))) != 0)) {
				{
				{
				setState(92); definition();
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public Token t;
		public Token n;
		public TerminalNode COCOA_PACKAGE() { return getToken(ThriftParser.COCOA_PACKAGE, 0); }
		public TerminalNode SMALLTALK_CATEGORY() { return getToken(ThriftParser.SMALLTALK_CATEGORY, 0); }
		public TerminalNode INCLUDE() { return getToken(ThriftParser.INCLUDE, 0); }
		public TerminalNode JAVA_PACKAGE() { return getToken(ThriftParser.JAVA_PACKAGE, 0); }
		public TerminalNode CPP_NAMESPACE() { return getToken(ThriftParser.CPP_NAMESPACE, 0); }
		public TerminalNode STAR() { return getToken(ThriftParser.STAR, 0); }
		public TerminalNode CPP_INCLUDE() { return getToken(ThriftParser.CPP_INCLUDE, 0); }
		public TerminalNode ST_IDENTIFIER() { return getToken(ThriftParser.ST_IDENTIFIER, 0); }
		public TerminalNode PY_MODULE() { return getToken(ThriftParser.PY_MODULE, 0); }
		public TerminalNode CSHARP_NAMESPACE() { return getToken(ThriftParser.CSHARP_NAMESPACE, 0); }
		public TerminalNode LITERAL() { return getToken(ThriftParser.LITERAL, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(ThriftParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ThriftParser.IDENTIFIER, i);
		}
		public TerminalNode PERL_PACKAGE() { return getToken(ThriftParser.PERL_PACKAGE, 0); }
		public TerminalNode RUBY_NAMESPACE() { return getToken(ThriftParser.RUBY_NAMESPACE, 0); }
		public TerminalNode PHP_NAMESPACE() { return getToken(ThriftParser.PHP_NAMESPACE, 0); }
		public TerminalNode SMALLTALK_PREFIX() { return getToken(ThriftParser.SMALLTALK_PREFIX, 0); }
		public TerminalNode XSD_NAMESPACE() { return getToken(ThriftParser.XSD_NAMESPACE, 0); }
		public TerminalNode NAMESPACE() { return getToken(ThriftParser.NAMESPACE, 0); }
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).exitHeader(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header);
		try {
			setState(130);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(98); match(INCLUDE);
				setState(99); match(LITERAL);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(100); match(CPP_INCLUDE);
				setState(101); match(LITERAL);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(102); match(NAMESPACE);
				setState(103); ((HeaderContext)_localctx).t = match(IDENTIFIER);
				setState(104); ((HeaderContext)_localctx).n = match(IDENTIFIER);
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(105); match(NAMESPACE);
				setState(106); match(STAR);
				setState(107); match(IDENTIFIER);
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(108); match(CPP_NAMESPACE);
				setState(109); match(IDENTIFIER);
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(110); match(PHP_NAMESPACE);
				setState(111); match(IDENTIFIER);
				}
				break;

			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(112); match(PY_MODULE);
				setState(113); match(IDENTIFIER);
				}
				break;

			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(114); match(PERL_PACKAGE);
				setState(115); match(IDENTIFIER);
				}
				break;

			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(116); match(RUBY_NAMESPACE);
				setState(117); match(IDENTIFIER);
				}
				break;

			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(118); match(SMALLTALK_CATEGORY);
				setState(119); match(ST_IDENTIFIER);
				}
				break;

			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(120); match(SMALLTALK_PREFIX);
				setState(121); match(IDENTIFIER);
				}
				break;

			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(122); match(JAVA_PACKAGE);
				setState(123); match(IDENTIFIER);
				}
				break;

			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(124); match(COCOA_PACKAGE);
				setState(125); match(IDENTIFIER);
				}
				break;

			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(126); match(XSD_NAMESPACE);
				setState(127); match(LITERAL);
				}
				break;

			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(128); match(CSHARP_NAMESPACE);
				setState(129); match(IDENTIFIER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public TypeDefinitionContext typeDefinition() {
			return getRuleContext(TypeDefinitionContext.class,0);
		}
		public ServiceContext service() {
			return getRuleContext(ServiceContext.class,0);
		}
		public ConstDefinitionContext constDefinition() {
			return getRuleContext(ConstDefinitionContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).enterDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).exitDefinition(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_definition);
		try {
			setState(135);
			switch (_input.LA(1)) {
			case CONST:
				enterOuterAlt(_localctx, 1);
				{
				setState(132); constDefinition();
				}
				break;
			case TYPEDEF:
			case ENUM:
			case SENUM:
			case STRUCT:
			case UNION:
			case EXCEPTION:
				enterOuterAlt(_localctx, 2);
				{
				setState(133); typeDefinition();
				}
				break;
			case SERVICE:
				enterOuterAlt(_localctx, 3);
				{
				setState(134); service();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeDefinitionContext extends ParserRuleContext {
		public SenumContext senum() {
			return getRuleContext(SenumContext.class,0);
		}
		public StructContext struct() {
			return getRuleContext(StructContext.class,0);
		}
		public Enum_tContext enum_t() {
			return getRuleContext(Enum_tContext.class,0);
		}
		public UnionContext union() {
			return getRuleContext(UnionContext.class,0);
		}
		public TypedefContext typedef() {
			return getRuleContext(TypedefContext.class,0);
		}
		public XceptionContext xception() {
			return getRuleContext(XceptionContext.class,0);
		}
		public TypeDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).enterTypeDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).exitTypeDefinition(this);
		}
	}

	public final TypeDefinitionContext typeDefinition() throws RecognitionException {
		TypeDefinitionContext _localctx = new TypeDefinitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typeDefinition);
		try {
			setState(143);
			switch (_input.LA(1)) {
			case TYPEDEF:
				enterOuterAlt(_localctx, 1);
				{
				setState(137); typedef();
				}
				break;
			case ENUM:
				enterOuterAlt(_localctx, 2);
				{
				setState(138); enum_t();
				}
				break;
			case SENUM:
				enterOuterAlt(_localctx, 3);
				{
				setState(139); senum();
				}
				break;
			case STRUCT:
				enterOuterAlt(_localctx, 4);
				{
				setState(140); struct();
				}
				break;
			case UNION:
				enterOuterAlt(_localctx, 5);
				{
				setState(141); union();
				}
				break;
			case EXCEPTION:
				enterOuterAlt(_localctx, 6);
				{
				setState(142); xception();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypedefContext extends ParserRuleContext {
		public TerminalNode TYPEDEF() { return getToken(ThriftParser.TYPEDEF, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ThriftParser.IDENTIFIER, 0); }
		public TypeAnnotationsContext typeAnnotations() {
			return getRuleContext(TypeAnnotationsContext.class,0);
		}
		public FieldTypeContext fieldType() {
			return getRuleContext(FieldTypeContext.class,0);
		}
		public TypedefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typedef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).enterTypedef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).exitTypedef(this);
		}
	}

	public final TypedefContext typedef() throws RecognitionException {
		TypedefContext _localctx = new TypedefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_typedef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145); match(TYPEDEF);
			setState(146); fieldType();
			setState(147); match(IDENTIFIER);
			setState(149);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(148); typeAnnotations();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommaOrSemicolonContext extends ParserRuleContext {
		public TerminalNode SEMI() { return getToken(ThriftParser.SEMI, 0); }
		public TerminalNode COMMA() { return getToken(ThriftParser.COMMA, 0); }
		public CommaOrSemicolonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commaOrSemicolon; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).enterCommaOrSemicolon(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).exitCommaOrSemicolon(this);
		}
	}

	public final CommaOrSemicolonContext commaOrSemicolon() throws RecognitionException {
		CommaOrSemicolonContext _localctx = new CommaOrSemicolonContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_commaOrSemicolon);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			_la = _input.LA(1);
			if ( !(_la==COMMA || _la==SEMI) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Enum_tContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(ThriftParser.LBRACE, 0); }
		public TerminalNode ENUM() { return getToken(ThriftParser.ENUM, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ThriftParser.IDENTIFIER, 0); }
		public EnumDefContext enumDef(int i) {
			return getRuleContext(EnumDefContext.class,i);
		}
		public List<EnumDefContext> enumDef() {
			return getRuleContexts(EnumDefContext.class);
		}
		public TypeAnnotationsContext typeAnnotations() {
			return getRuleContext(TypeAnnotationsContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(ThriftParser.RBRACE, 0); }
		public Enum_tContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enum_t; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).enterEnum_t(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).exitEnum_t(this);
		}
	}

	public final Enum_tContext enum_t() throws RecognitionException {
		Enum_tContext _localctx = new Enum_tContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_enum_t);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153); match(ENUM);
			setState(154); match(IDENTIFIER);
			setState(155); match(LBRACE);
			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(156); enumDef();
				}
				}
				setState(161);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(162); match(RBRACE);
			setState(164);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(163); typeAnnotations();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EnumDefContext extends ParserRuleContext {
		public IntConstantContext intConstant() {
			return getRuleContext(IntConstantContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(ThriftParser.IDENTIFIER, 0); }
		public TypeAnnotationsContext typeAnnotations() {
			return getRuleContext(TypeAnnotationsContext.class,0);
		}
		public CommaOrSemicolonContext commaOrSemicolon() {
			return getRuleContext(CommaOrSemicolonContext.class,0);
		}
		public TerminalNode EQ() { return getToken(ThriftParser.EQ, 0); }
		public EnumDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enumDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).enterEnumDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).exitEnumDef(this);
		}
	}

	public final EnumDefContext enumDef() throws RecognitionException {
		EnumDefContext _localctx = new EnumDefContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_enumDef);
		int _la;
		try {
			setState(182);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(166); match(IDENTIFIER);
				setState(167); match(EQ);
				setState(168); intConstant();
				setState(170);
				_la = _input.LA(1);
				if (_la==LPAREN) {
					{
					setState(169); typeAnnotations();
					}
				}

				setState(173);
				_la = _input.LA(1);
				if (_la==COMMA || _la==SEMI) {
					{
					setState(172); commaOrSemicolon();
					}
				}

				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(175); match(IDENTIFIER);
				setState(177);
				_la = _input.LA(1);
				if (_la==LPAREN) {
					{
					setState(176); typeAnnotations();
					}
				}

				setState(180);
				_la = _input.LA(1);
				if (_la==COMMA || _la==SEMI) {
					{
					setState(179); commaOrSemicolon();
					}
				}
